# cmake_embeded_project

./: 下载链接.txt  编译选项.txt
Cmake_Test/: CMakeLists.txt  gd32f10x_flash.sct  startup_gd32f10x_hd.s  toolchain.cmake
Cmake_Test/Firmware/: gd32f10x_flash.ld
Cmake_Test/Firmware/Firmware/CMSIS/GD/GD32F10x/Include/: gd32f10x.h  system_gd32f10x.h
Cmake_Test/Firmware/Firmware/CMSIS/GD/GD32F10x/Source/: syscalls.c  system_gd32f10x.c
Cmake_Test/Firmware/Firmware/GD32F10x_standard_peripheral/Include/: gd32f10x_adc.h  gd32f10x_bkp.h  gd32f10x_can.h  gd32f10x_crc.h  gd32f10x_dac.h  gd32f10x_dbg.h  gd32f10x_dma.h  gd32f10x_enet.h  gd32f10x_exmc.h  gd32f10x_exti.h  gd32f10x_fmc.h  gd32f10x_fwdgt.h  gd32f10x_gpio.h  gd32f10x_i2c.h  gd32f10x_misc.h  gd32f10x_pmu.h  gd32f10x_rcu.h  gd32f10x_rtc.h  gd32f10x_sdio.h  gd32f10x_spi.h  gd32f10x_timer.h  gd32f10x_usart.h  gd32f10x_wwdgt.h
Cmake_Test/Firmware/Firmware/GD32F10x_standard_peripheral/Source/: gd32f10x_adc.c  gd32f10x_bkp.c  gd32f10x_can.c  gd32f10x_crc.c  gd32f10x_dac.c  gd32f10x_dbg.c  gd32f10x_dma.c  gd32f10x_enet.c  gd32f10x_exmc.c  gd32f10x_exti.c  gd32f10x_fmc.c  gd32f10x_fwdgt.c  gd32f10x_gpio.c  gd32f10x_i2c.c  gd32f10x_misc.c  gd32f10x_pmu.c  gd32f10x_rcu.c  gd32f10x_rtc.c  gd32f10x_sdio.c  gd32f10x_spi.c  gd32f10x_timer.c  gd32f10x_usart.c  gd32f10x_wwdgt.c
Cmake_Test/Firmware/gcc_startup/: startup_gd32f10x_cl.S  startup_gd32f10x_hd.S  startup_gd32f10x_md.S  startup_gd32f10x_xd.S
Cmake_Test/Firmware/inc/: gd32f10x_eval.h  gd32f10x_it.h  gd32f10x_libopt.h  main.h  systick.h
Cmake_Test/Firmware/src/: gd32f10x_eval.c  gd32f10x_it.c  main.c  readme.txt  systick.c
